[tool.poetry]
name = "reproductive-rights-data-project"
version = "0.1.0"
description = "A capstone project for UChicago's CAPP122 course where state-wide abortion law and clinic data is taken from multiple sources and used to create intuitive visuals."
authors = ["Aïcha Camara <aichacamara@ucicago.edu>", "Chanteria Milner <milnerca@uchicago.edu>",
    "Kate Habich <ehabich@uchicago.edu>", "Michael Plunkett <michplunkett@uchicago.edu>"]
readme = "README.md"
packages = [{include = "reproductive_rights_data_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
pylint = "^2.15.10"
black = "^22.12.0"
requests = "^2.28.2"
responses = "^0.22.0"
scikit-learn = "^1.2.1"
plotly = "^5.13.0"
pandas = "^1.5.3"
dash = "^2.8.1"
dash-bootstrap-components = "^1.3.1"
flask = "^2.2.3"
isort = "^5.12.0"

[tool.black]
line-length = 80

[tool.isort]
profile= "black"
line_length = 80
skip = [".gitignore", "reproductive_rights_data_project/data/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
